--- a/animatedCountdown/animatedCountdown.html
+++ b/animatedCountdown/animatedCountdown.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" href="animatedCountdown.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="counter">
+        <div class="nums">
+        <span class="in">3</span>
+        <span>2</span>
+        <span>1</span>
+        <span>0</span>
+        </div>
+        <div class="final">
+            <h1>GO!</h1>
+            <button id="replay">Replay</button>
+        </div>
+    </div>
     <script src="animatedCountdown.js"></script>
 </body>
 </html>
