--- a/animatedCountdown/animatedCountdown.html
+++ b/animatedCountdown/animatedCountdown.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <div class="counter">
-        <div class="nums">
+        <div class="numbers">
         <span class="in">3</span>
         <span>2</span>
         <span>1</span>
         <span>0</span>
         </div>
+        <h4>Get Ready</h4>
+        </div>
+
         <div class="final">
             <h1>GO!</h1>
             <button id="replay">Replay</button>
         </div>
-    </div>
     <script src="animatedCountdown.js"></script>
 </body>
 </html>
