--- a/imageCarousel/imageCarousel.html
+++ b/imageCarousel/imageCarousel.html
@@ -11,12 +11,12 @@
 <body>
     <div class="carousel">
         <div class="image-container" id="imgs">
-            <img src="https://images.unsplash.com/photo-1524598242706-19bed322a3fa?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDIwfEZ6bzN6dU9ITjZ3fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="1st">
-            <img src="https://images.unsplash.com/photo-1574166492482-30c2464c7680?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fG1hY2h1JTIwcGljY2h1fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="2nd">
-            <img src="https://images.unsplash.com/photo-1592825803503-05b56a708fbd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGN1YmF8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="3rd">
-            <img src="https://images.unsplash.com/photo-1504618223053-559bdef9dd5a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGlyZWxhbmR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="4th">
-            <img src="https://images.unsplash.com/photo-1583395838144-09c70d270bda?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80" alt="5th">
-            <img src="https://images.unsplash.com/photo-1607427293702-036933bbf746?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80" alt="6th">
+            <img src="https://images.unsplash.com/photo-1524598242706-19bed322a3fa?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDIwfEZ6bzN6dU9ITjZ3fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="1st" class= "img">
+            <img src="https://images.unsplash.com/photo-1574166492482-30c2464c7680?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fG1hY2h1JTIwcGljY2h1fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="2nd" class= "img">
+            <img src="https://images.unsplash.com/photo-1592825803503-05b56a708fbd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGN1YmF8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="3rd" class= "img">
+            <img src="https://images.unsplash.com/photo-1504618223053-559bdef9dd5a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGlyZWxhbmR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="4th" class= "img">
+            <img src="https://images.unsplash.com/photo-1583395838144-09c70d270bda?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80" alt="5th" class= "img">
+            <img src="https://images.unsplash.com/photo-1607427293702-036933bbf746?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80" alt="6th" class= "img">
         </div>
         <div class="buttons-container">
             <button id="left">Prev</button>
