--- a/imageCarousel/imageCarousel.html
+++ b/imageCarousel/imageCarousel.html
@@ -20,7 +20,7 @@
         </div>
         <div class="buttons-container">
             <button id="left">Prev</button>
-            <button class="right">Next</button>
+            <button id="right">Next</button>
         </div>
     </div>
     <script src="imageCarousel.js"></script>
