--- a/hoverBoard/hoverboard.html
+++ b/hoverBoard/hoverboard.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="hoverboard.css">
 </head>
 <body>
+    <div class="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
     <script src="hoverboard.js"></script>
 </body>
 </html>
