--- a/hoverBoard/hoverboard.html
+++ b/hoverBoard/hoverboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="hoverboard.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
