--- a/pokedex/pokedex.html
+++ b/pokedex/pokedex.html
@@ -6,7 +6,7 @@
     <title>Pokedex</title>
     <link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pokedex.css">
 </head>
 <body>
     <h1>Pokedex</h1>
@@ -45,6 +45,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="pokedex.js"></script>
 </body>
 </html>
