--- a/mobileTab/mobileTabNav.html
+++ b/mobileTab/mobileTabNav.html
@@ -24,6 +24,31 @@
 
     <img src="https://images.unsplash.com/photo-1624860916247-ff55fef72e76?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDIxNnw2c01WalRMU2tlUXx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="Trees" 
     class= "content">
+
+    <div class="nav">
+        <ul>
+            <li>
+                <i class="fas fa-home"></i>
+                <p>Home</p>
+            </li>
+
+            <li>
+                <i class="fas fa-box"></i>
+                <p>Work</p>
+            </li>
+
+            <li>
+                <i class="fas fa-book-open"></i>
+                <p>Blog</p>
+            </li>
+
+            <li>
+                <i class="fas fa-users"></i>
+                <p>About Us</p>
+            </li>
+
+        </ul>
+    </div>
 </div>
 
     <script src="moblieTabNav.js"></script>
