--- a/mobileTab/mobileTabNav.html
+++ b/mobileTab/mobileTabNav.html
@@ -25,7 +25,7 @@
     <img src="https://images.unsplash.com/photo-1624860916247-ff55fef72e76?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDIxNnw2c01WalRMU2tlUXx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="Trees" 
     class= "content">
 
-    <div class="nav">
+  <nav>
         <ul>
             <li>
                 <i class="fas fa-home"></i>
@@ -46,9 +46,8 @@
                 <i class="fas fa-users"></i>
                 <p>About Us</p>
             </li>
-
         </ul>
-    </div>
+    </nav>
 </div>
 
     <script src="moblieTabNav.js"></script>
