--- a/passwordStrength/passwordStrength.html
+++ b/passwordStrength/passwordStrength.html
@@ -16,7 +16,21 @@
     <div class="bg-white rounded p-10 text-center shadow-md">
         <h1 class="text-3xl">Image Password Strength</h1>
         <p class="text-sm text-gray-700">Change your password to see the effect</p>
+        
+        <label for="email" class="text-gray-900">Email:</label>
+        <input
+          type="text"
+          class="border block w-full p-2 mt-2 rounded"
+          id="email"
+          placeholder="Enter Email"
+        />
+      </div>
 
+        <div class="my-4 text-left">
+            <label for="email" class="text-gray-900">Password:</label>
+            <input type="password" class="border block w-full p-2 mt-2 rounded" id=password placeholder="Enter Password">
+            <button class="bg-black text-white py-2 mt-4 inline-block w-full rounded" type="submit">Submit</button>
+        </div>
     </div>
     <script src="passwordStrength.js"></script>
 </body>
