--- a/verifyAccount/verifyAccount.html
+++ b/verifyAccount/verifyAccount.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="verifyAccount.css">
 </head>
 <body>
+    <div class="container">
+        <h2>Verify Your Account</h2>
+        <p>We emailed you the six digit code to confirm your account. <br/>
+        Enter the code below to verify your email address</p>
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+    </div>
     <script src="verifyAccount.js"></script>
 </body>
 </html>
