--- a/verifyAccount/verifyAccount.html
+++ b/verifyAccount/verifyAccount.html
@@ -27,6 +27,11 @@
             <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
   
     </div>
+
+    <small class="info">
+        This is design only. We didn't actually send you an email as we don't have your email, right?
+      </small>
+      </div>
     <script src="verifyAccount.js"></script>
 </body>
 </html>
