--- a/liveUser/liveUser.html
+++ b/liveUser/liveUser.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="liveUser.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <h1>Search by Name</h1>
+    <div class="container">
+        <div class="header">
+            <h4 class="title">User Filter</h4>
+            <small class="subtitile">Search by name and/or location</small>
+            <input type="text" id="filter" placeholder="search">
+        </div>
+    </div>
     <script src="liveUser.js"></script>
 </body>
 </html>
