--- a/liveUser/liveUser.html
+++ b/liveUser/liveUser.html
@@ -16,7 +16,7 @@
             <small class="subtitile">Search by name and/or location</small>
             <input type="text" id="filter" placeholder="search">
         </header>
-        <ul>
+        <ul id="result" class="user-list">
             <li>
                 <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
                 <div class="user-info">
