--- a/liveUser/liveUser.html
+++ b/liveUser/liveUser.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="liveUser.css">
 </head>
 <body>
-    <h1>Search by Name</h1>
+    <h1>User Search</h1>
     <div class="container">
        <header>
             <h4 class="title">User Filter</h4>
@@ -17,29 +17,7 @@
             <input type="text" id="filter" placeholder="search">
         </header>
         <ul id="result" class="user-list">
-            <li>
-                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
-                <div class="user-info">
-                <h4>Sarah Smith</h4>
-                <p>Philadelphia, PA</p>
-            </div>
-            </li>
-
-            <li>
-                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
-                <div class="user-info">
-                <h4>Sarah Smith</h4>
-                <p>Philadelphia, PA</p>
-            </div>
-            </li>
-
-            <li>
-                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
-                <div class="user-info">
-                <h4>Sarah Smith</h4>
-                <p>Philadelphia, PA</p>
-            </div>
-            </li>
+           
             <li>
                 <h3>Loading...</h3>
             </li>
