--- a/userFeedback/userFeedback.html
+++ b/userFeedback/userFeedback.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="userFeedback.css">
 </head>
 <body>
+    <div id="panel" class="panel-container">
+        <strong>How satisfied are you with our customer support performance?</strong>
+        <div class="ratings-container">
+            <div class = "rating">
+                <img src="https://image.flaticon.com/icons/svg/187/187150.svg" alt="">
+                <small>Unhappy</small>
+              </div>
+              <div class="rating">
+                <img src="https://image.flaticon.com/icons/svg/187/187136.svg" alt=""/>
+                <small>Neutral</small>
+              </div>
+      
+              <div class="rating active">
+                <img src="https://image.flaticon.com/icons/svg/187/187133.svg" alt=""/>
+                <small>Satisfied</small>
+              </div>
+            </div>
+            <button class="btn" id="send">Send Review</button>
+          </div>
+            </div>
+        </div>
+    </div>
     <script src="userFeedback.js"></script>
 </body>
 </html>
