--- a/customRangeSlider/customSlider.html
+++ b/customRangeSlider/customSlider.html
@@ -12,7 +12,7 @@
 <h2>Custom Range Slider</h2>
 <div class="range-container">
     <input type="range" id="range" min="0" max="100">
-    <label for="range">50</label>
+    <label for="range" class="rangeLabel">50</label>
 </div>
     <script src="customSlider.js"></script>
 </body>
