--- a/quizApp/quizApp.html
+++ b/quizApp/quizApp.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="quizApp.css">
 </head>
 <body>
+    <div class="quiz-container" id="quiz">
+        <div id="quiz-header">
+            <h2 id="question">Question Text</h2>
+            <ul>
+                <li>
+                    <input type="radio" name="answer" id="a" class="answer">
+                    
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="quizApp.js"></script>
 </body>
 </html>
