--- a/quizApp/quizApp.html
+++ b/quizApp/quizApp.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="quizApp.css">
 </head>
 <body>
+    <h1> <i class="fas fa-code"></i>Coding Quiz!<i class="fas fa-code"></i></h1>
     <div class="quiz-container" id="quiz">
         <div id="quiz-header">
             <h2 id="question">Question Text</h2>
