--- a/testimonialBox/testimonialBox.html
+++ b/testimonialBox/testimonialBox.html
@@ -19,7 +19,12 @@
             to utilize my custom site on my own. Amazing, will hire again!
         </p>
         <div class="user">
-            
+            <img src="http://randomuser.me/api/portraits/women/46.jpg" 
+            alt="user" class="user-image">
+            <div class="user-details">
+                <h4 class="username">Shmy Shmy Jenkins</h4>
+                <p class="role">Marketing</p>
+            </div>
         </div>
     </div>
     <script src="testimonialBox.js"></script>
