--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>To Do</h1>
     <form id="form">
-        <input type="text" class="input" id="input">
+        <input type="text" class="input" id="input"
         placeholder="Enter your item to do" autocomplete="off">
         
         <ul class="todos" id="todos">
